The issue of standard icons not being displayed has been resolved.

--- a/Maui.NullableDateTimePicker.Samples/Maui.NullableDateTimePicker.Samples.csproj
+++ b/Maui.NullableDateTimePicker.Samples/Maui.NullableDateTimePicker.Samples.csproj
@@ -53,7 +53,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Maui" Version="5.1.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
@@ -65,6 +65,12 @@
 	  <MauiFont Update="Resources\Fonts\fa-solid-900.ttf">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </MauiFont>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="NewPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
