--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -20,6 +20,7 @@
 		<AssemblyVersion>1.0.2.0</AssemblyVersion>
 		<Version>1.0.2</Version>
 	</PropertyGroup>
+
 	<ItemGroup>
 		<None Include="..\README.md">
 			<Pack>True</Pack>
@@ -30,12 +31,13 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
-	<ItemGroup>
-		<None Remove="Images\*.*" />
-	</ItemGroup>
-	
+
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Images\*" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -43,9 +45,4 @@
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 	</ItemGroup>
-
-	<ItemGroup>
-		<EmbeddedResource Include="Images\**" Pack="true" PackagePath="Images" />
-	</ItemGroup>
-
 </Project>
