NullableDateTimePickerPopup class was made public. In this way, your own entry and button can be used by calling the calendar popup directly without ContentView.

--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -41,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<MauiXaml Update="NullableDateTimePickerContent.xaml">
+		<MauiXaml Update="Popup\NullableDateTimePickerContent.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 	</ItemGroup>
