--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Maui.NullableDateTimePicker.Tests/Maui.NullableDateTimePicker.Tests.csproj
