Testing nullabledatetimepicker on modal page

--- a/Maui.NullableDateTimePicker.Samples/Maui.NullableDateTimePicker.Samples.csproj
+++ b/Maui.NullableDateTimePicker.Samples/Maui.NullableDateTimePicker.Samples.csproj
@@ -66,4 +66,10 @@
 	  </MauiFont>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="NewPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
