--- a/Maui.NullableDateTimePicker.Samples.Net8/Maui.NullableDateTimePicker.Samples.Net8.csproj
+++ b/Maui.NullableDateTimePicker.Samples.Net8/Maui.NullableDateTimePicker.Samples.Net8.csproj
@@ -66,4 +66,16 @@
 	  <ProjectReference Include="..\Maui.NullableDateTimePicker\Maui.NullableDateTimePicker.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="NewPage.xaml.cs">
+	    <DependentUpon>NewPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="NewPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
