--- a/Maui.NullableDateTimePicker.Samples/Maui.NullableDateTimePicker.Samples.csproj
+++ b/Maui.NullableDateTimePicker.Samples/Maui.NullableDateTimePicker.Samples.csproj
@@ -52,7 +52,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.21" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 	</ItemGroup>
 
