--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0;net9.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks>net9.0</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -18,8 +18,8 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<AssemblyVersion>2.4.0.0</AssemblyVersion>
-		<Version>2.4.0</Version>
+		<AssemblyVersion>2.4.1.0</AssemblyVersion>
+		<Version>2.4.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,23 +36,28 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
+
 	<PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0'))">
-		<MauiVersion>9.0.21</MauiVersion>
+		<MauiVersion>9.0.80</MauiVersion>
 	</PropertyGroup>
-	<PropertyGroup Condition="$(TargetFramework.StartsWith('net8.0'))">
-		<MauiVersion>8.0.83</MauiVersion>
-	</PropertyGroup>
-	<ItemGroup Condition="$(TargetFramework.StartsWith('net8.0'))">
-		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
-	</ItemGroup>
+
 	<ItemGroup Condition="$(TargetFramework.StartsWith('net9.0'))">
-		<PackageReference Include="CommunityToolkit.Maui" Version="10.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.6" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageReference Include="Mopups" Version="1.3.2" Condition="$([MSBuild]::IsOSPlatform('windows'))" />
+	</ItemGroup>
+	<ItemGroup>
+	  <MauiXaml Update="Controls\GroupedButtonTemplate.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Controls\NullableDateTimePickerClockView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+	<ItemGroup>
+	  <MauiFont Include="Resources\Fonts\OpenSans-Regular.ttf" />
 	</ItemGroup>
 </Project>
