--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net9.0</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -18,8 +17,8 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<AssemblyVersion>2.4.1.0</AssemblyVersion>
-		<Version>2.4.1</Version>
+		<AssemblyVersion>3.0.0.0</AssemblyVersion>
+		<Version>3.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -31,10 +30,7 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-		<None Include="..\screenshot.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
+		<None Include="Screenshots\**\*" Pack="True" PackagePath="\" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0'))">
@@ -43,21 +39,30 @@
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('net9.0'))">
 		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.6" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 	</ItemGroup>
 	<ItemGroup>
-	  <MauiXaml Update="Controls\GroupedButtonTemplate.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Controls\NullableDateTimePickerClockView.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
+		<MauiXaml Update="Controls\ButtonTemplate.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Controls\ClockView.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Popup\TextInputPopup.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 	<ItemGroup>
-	  <MauiFont Include="Resources\Fonts\OpenSans-Regular.ttf" />
+		<MauiFont Include="Resources\Fonts\OpenSans-Regular.ttf" />
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Update="Controls\ButtonTemplate.xaml.cs">
+			<DependentUpon>ButtonTemplate.xaml</DependentUpon>
+		</Compile>
+		<Compile Update="Controls\ClockView.xaml.cs">
+			<DependentUpon>ClockView.xaml</DependentUpon>
+		</Compile>
 	</ItemGroup>
 </Project>
