--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -30,7 +30,7 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-		<None Include="..\Screenshots\**\*" Pack="True" PackagePath="Screenshots\" />
+		<None Include="..\Screenshots\**\*" Pack="True" PackagePath="\" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0'))">
