--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -30,11 +30,11 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-		<None Include="..\Screenshots\**\*">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
 	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\Screenshots\**\*" Pack="True" PackagePath="Screenshots\" />
+	</ItemGroup>
+
 
 	<PropertyGroup Condition="$(TargetFramework.StartsWith('net9.0'))">
 		<MauiVersion>9.0.80</MauiVersion>
