--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net9.0</TargetFrameworks>
+		<TargetFrameworks>net9.0;</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<!-- enable trimming and AOT analyzers on all platforms -->
+		<IsAotCompatible>true</IsAotCompatible>
+
+		<!-- select platforms to use with NativeAOT -->
+		<PublishAot Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">true</PublishAot>
+		<PublishAot Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">true</PublishAot>
 		<Title>Maui.NullableDateTimePicker</Title>
 		<Authors>Sebarslan</Authors>
 		<Description>Nullable and clerable datetime picker component for Maui</Description>
@@ -17,15 +23,17 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<AssemblyVersion>3.0.0.0</AssemblyVersion>
-		<Version>3.0.0</Version>
+		<AssemblyVersion>3.0.1.0</AssemblyVersion>
+		<Version>3.0.1</Version>
 		<MauiVersion>9.0.81</MauiVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<EmbeddedResource Include="Images\*" />
 	</ItemGroup>
-
+	<ItemGroup>
+		<MauiFont Include="Resources\Fonts\OpenSans-Regular.ttf" />
+	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\README.md">
 			<Pack>True</Pack>
@@ -36,29 +44,6 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)">
 			<PrivateAssets>all</PrivateAssets>
-			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
-	</ItemGroup>
-	<ItemGroup>
-		<MauiXaml Update="Controls\ButtonTemplate.xaml">
-			<Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="Controls\ClockView.xaml">
-			<Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="Popup\TextInputPopup.xaml">
-			<Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-	</ItemGroup>
-	<ItemGroup>
-		<MauiFont Include="Resources\Fonts\OpenSans-Regular.ttf" />
-	</ItemGroup>
-	<ItemGroup>
-		<Compile Update="Controls\ButtonTemplate.xaml.cs">
-			<DependentUpon>ButtonTemplate.xaml</DependentUpon>
-		</Compile>
-		<Compile Update="Controls\ClockView.xaml.cs">
-			<DependentUpon>ClockView.xaml</DependentUpon>
-		</Compile>
 	</ItemGroup>
 </Project>
