--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net9.0;</TargetFrameworks>
+		<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<!-- enable trimming and AOT analyzers on all platforms -->
 		<IsAotCompatible>true</IsAotCompatible>
-
+		<PublishTrimmed>true</PublishTrimmed>
+		<TrimMode>full</TrimMode>
 		<!-- select platforms to use with NativeAOT -->
 		<PublishAot Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">true</PublishAot>
 		<PublishAot Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">true</PublishAot>
@@ -25,7 +26,15 @@
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<AssemblyVersion>3.1.3.0</AssemblyVersion>
 		<Version>3.1.3</Version>
-		<MauiVersion>9.0.81</MauiVersion>
+		<NoWarn>NU1605;NU1701</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<EnablePackageValidation>true</EnablePackageValidation>
+		<EnableStrictModeForBaselineValidation>true</EnableStrictModeForBaselineValidation>
+		<PackageValidationBaselineVersion>3.1.3</PackageValidationBaselineVersion>
+		<GenerateCompatibilitySuppressionFile>true</GenerateCompatibilitySuppressionFile>
+		<CompatibilitySuppressionFilePath>ApiCompatSuppressions.xml</CompatibilitySuppressionFilePath>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -40,10 +49,22 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
+
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Maui" Version="12.0.0" />
+		<!-- net9.0 -->
+		<PackageReference Include="CommunityToolkit.Maui"
+						  Version="12.0.0"
+						  Condition="'$(TargetFramework)' == 'net9.0'" />
+
+		<!-- net10.0 -->
+		<PackageReference Include="CommunityToolkit.Maui"
+						  Version="13.0.0"
+						  Condition="'$(TargetFramework)' == 'net10.0'" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)">
 			<PrivateAssets>all</PrivateAssets>
+			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
 	</ItemGroup>
 </Project>
