--- a/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
+++ b/Maui.NullableDateTimePicker/Maui.NullableDateTimePicker.csproj
@@ -24,9 +24,8 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<AssemblyVersion>3.1.3.0</AssemblyVersion>
-		<Version>3.1.3</Version>
-		<NoWarn>NU1605;NU1701</NoWarn>
+		<AssemblyVersion>3.1.4.0</AssemblyVersion>
+		<Version>3.1.4</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -54,12 +53,18 @@
 		<!-- net9.0 -->
 		<PackageReference Include="CommunityToolkit.Maui"
 						  Version="12.0.0"
-						  Condition="'$(TargetFramework)' == 'net9.0'" />
+						  Condition="'$(TargetFramework)' == 'net9.0'">
+			<PrivateAssets>all</PrivateAssets>
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
 
 		<!-- net10.0 -->
 		<PackageReference Include="CommunityToolkit.Maui"
 						  Version="13.0.0"
-						  Condition="'$(TargetFramework)' == 'net10.0'" />
+						  Condition="'$(TargetFramework)' == 'net10.0'">
+			<PrivateAssets>all</PrivateAssets>
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)">
